--- a/04-blackyjack-vite/style.css
+++ b/04-blackyjack-vite/style.css
@@ -20,7 +20,7 @@ svg {
 body {
   margin: 0;
   min-height: 100dvh;
-  background-image: url(public/assets/image/mesa-casino-vertical.jpg);
+  background-image: url(/assets/image/mesa-casino-vertical.jpg);
   background-position: center;
   display: flex;
   flex-direction: column;
@@ -43,9 +43,36 @@ p {
 }
 
 .header {
-  font-size: xx-large;
-  font-weight: 600;
   margin-bottom: 1rem;
+}
+
+.header svg {
+  /* width="185" height="76" */
+  width: 185px;
+  height: 76px;
+}
+
+#trebol {
+  animation: ficha 7s infinite;
+  transform-origin: center;
+}
+
+@keyframes ficha {
+  0% {
+    /* transform: rotateY(0deg) */
+    /* transform: rotateX(180deg); */
+    transform: scale(1);
+  }
+
+  50% {
+    /* transform: rotateX(-180deg); */
+    transform: scale(1.1);
+  }
+
+  100% {
+    /* transform: rotateX(-180deg); */
+    transform: scale(1);
+  }
 }
 
 main {
@@ -206,7 +233,7 @@ main {
 @media(width >=768px) {
 
   body {
-    background-image: url('public/assets/image/mesa-casino.jpg');
+    background-image: url('/assets/image/mesa-casino.jpg');
   }
 
   main {
@@ -220,6 +247,12 @@ main {
     font-size: xxx-large;
     font-weight: 800;
     /* margin-bottom: 2rem; */
+  }
+
+  .header svg {
+    /* width="185" height="76" */
+    width: 370px;
+    height: 152px;
   }
 
   .sectorMensaje {
